<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.testetecnico.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/login_to_movies"
            app:destination="@id/navigation_movies_releases" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movies_releases"
        android:name="com.example.testetecnico.ui.movies.list.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/movies_release_item">
        <action
            android:id="@+id/movies_to_detail"
            app:destination="@id/navigation_movie_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movie_detail"
        android:name="com.example.testetecnico.ui.movies.detail.MovieDetailFragment"
        android:label="@string/title_movie_detail"
        tools:layout="@layout/fragment_movies_details" />

</navigation>