<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/clItem"
    android:padding="12dp"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/photo_movie"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:lines="1"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageMovie"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:lines="3"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageMovie"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <RatingBar
        android:id="@+id/rbRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:contentDescription="@string/rating"
        android:numStars="5"
        android:scaleX=".5"
        android:scaleY=".5"
        android:theme="@style/RatingBar"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toStartOf="@+id/tvDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMovie" />
</androidx.constraintlayout.widget.ConstraintLayout>