<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/photo_movie"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:layout_marginEnd="22dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/rbRatingBar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/rating"
                android:numStars="5"
                android:scaleX=".5"
                android:scaleY=".5"
                android:theme="@style/RatingBar"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvDescriptionTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="12"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbRatingBar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/gold"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle">

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tvAdultCardView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/red"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle">

                <TextView
                    android:id="@+id/tvAdult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/adult"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>