<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/black"
    android:orientation="vertical"
    android:id="@+id/fragment_container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/movflix"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/loginDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/movieflix_description"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toTopOf="@id/et_email"
        app:layout_constraintBottom_toBottomOf="@id/et_email"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_baseline_lock_24"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toTopOf="@id/et_password"
        app:layout_constraintBottom_toBottomOf="@id/et_password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape"
            android:inputType="textPassword"
            android:padding="12dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_message_error"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:fontFamily="@font/bebas_neue"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:text="@string/sign"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>